# projects

./: .bazel_fix_commands.json  .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  containers.bzl  dependencies.bzl  go.mod  go.sum  package-lock.json  package.json  repos.bzl  requirements.txt  test.sh  tsconfig.json
examples/: BUILD.bazel
examples/python/: main.py
experiments/: BUILD.bazel  black_bin.py  verify-black.sh  verify_black.py
experiments/logtest/: BUILD.bazel  main.go
experiments/rollup/: BUILD.bazel  rollup.config.js  run.sh
experiments/rollup/src/: main.js
lang_examples/py/testing/: BUILD.bazel  lib.py  lib_pytest.py  lib_test.py
logging/: BUILD.bazel  go.mod  go.sum  log-schema.sql  main.go  vector.toml
logging/cmd/query/: BUILD.bazel  main.go
logging/internal/queryrunner/: BUILD.bazel  lexer.go  lexer_test.go  queryconv_test.go  runner.go
proj1/: main.go
python_test/: BUILD.bazel  lib.py  lib_test.py  main.py
rpc/twirp/client/: BUILD.bazel  main.go
rpc/twirp/helloworld/: BUILD.bazel  helloworld.pb.go  helloworld.twirp.go
rpc/twirp/server/: BUILD.bazel  main.go
tapeworm/bot_v2/: BUILD  BUILD.bazel  bot.go  config.go  entities.go  main.go  schema.sql  watch.sh
tapeworm/bot_v2/cmd/bot/: BUILD.bazel  main.go
tapeworm/botv2/: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  Makefile  bot.go  config.go  config_test.go  db.go  docker-compose.yml  entities.go  entities_test.go  go.mod  go.sum  links.go  links_test.go  logger.go  schema-sqlite.sql  schema.sql  shell.nix  sqlboiler.toml  telegram.go  todo.md  tools.go  updates.go  watch.sh
tapeworm/botv2/app/: next.config.js  package.json  tailwind.config.js  tsconfig.json
tapeworm/botv2/app-remix/: Dockerfile  package-lock.json  package.json
tapeworm/botv2/app-remix/app/: root.tsx
tapeworm/botv2/app-remix/app/icons/: Hn.tsx  index.ts
tapeworm/botv2/app-remix/app/models/: link.ts
tapeworm/botv2/app-remix/app/routes/: detail.tsx  index.tsx
tapeworm/botv2/app-remix/app/utils/: api.server.ts
tapeworm/botv2/app/pages/: index.tsx
tapeworm/botv2/cmd/backfill-domain-and-url/: main.go  wire.go  wire_gen.go
tapeworm/botv2/cmd/bot/: BUILD.bazel  main.go
tapeworm/botv2/cmd/create-bleve-index/: main.go
tapeworm/botv2/cmd/export-to-sqlite/: BUILD.bazel  main.go
tapeworm/botv2/cmd/migrate/: main.go  wire.go  wire_gen.go
tapeworm/botv2/cmd/simplifiedbot/: main.go  wire.go  wire_gen.go
tapeworm/botv2/cmd/sonic-ingest/: BUILD.bazel  main.go
tapeworm/botv2/db/migrations/: 20220626060156_init.down.sql  20220626060156_init.up.sql  20220626061405_add_link_contents.down.sql  20220626061405_add_link_contents.up.sql  20220809152037_add_host_and_url.down.sql  20220809152037_add_host_and_url.up.sql  20220813133843_add_link_label.down.sql  20220813133843_add_link_label.up.sql  20221106072436_domain_blocklist.up.sql  20221214092536_generic_blocklist.down.sql  20221214092536_generic_blocklist.up.sql  20221214150831_deprecate_domain_blocklist.up.sql  20230129103232_link_dimension.down.sql  20230129103232_link_dimension.up.sql  20230207112204_links_dim_processed.down.sql  20230207112204_links_dim_processed.up.sql  20231109141032_upsert-link-table.down.sql  20231109141032_upsert-link-table.up.sql  20231109172657_rename-links-v1.down.sql  20231109172657_rename-links-v1.up.sql
tapeworm/botv2/enhancers/: BUILD.bazel  links.go  oembed.go  title_reader.go  youtube.go
tapeworm/botv2/internal/: BUILD.bazel  canonlog.go  config.go  config_test.go  core.go  logger.go  wire.go
tapeworm/botv2/internal/config/: provider.go
tapeworm/botv2/internal/db/: content_blocklist.go  domain_blacklist.go  link.go  link_dimension.go  logger.go  search.go  store.go  update.go
tapeworm/botv2/internal/dimension/: collector.go  wire.go
tapeworm/botv2/internal/enhancers/: default.go  links.go  links_test.go  oembed.go  reddit.go  title_reader.go  title_reader_test.go
tapeworm/botv2/internal/errors/: errors.go
tapeworm/botv2/internal/fdb-bleve/: iterator.go  reader.go  store.go  store_test.go  writer.go
tapeworm/botv2/internal/httpserver/: middleware.go  server.go
tapeworm/botv2/internal/logging/: logger.go
tapeworm/botv2/internal/managed/: lifecycle.go
tapeworm/botv2/internal/pointer/: pointer.go
tapeworm/botv2/internal/services/: wire.go
tapeworm/botv2/internal/services/algolia/: api.go  hn.go  types.go
tapeworm/botv2/internal/telegrampoller/: helpers.go  helpers_test.go  logger.go  poller.go
tapeworm/botv2/internal/types/: content_blocklist.go  dimension.go  domain_blacklist.go  link.go
tapeworm/botv2/internal/utils/: BUILD.bazel  utils.go
tapeworm/botv2/links/: BUILD.bazel  links.go  service.go  sqlite3.go
tapeworm/botv2/models/: BUILD.bazel  boil_suites_test.go  boil_table_names.go  links.go  links_test.go  skipped_links.go  skipped_links_test.go  sqlite3_suites_test.go  updates.go  updates_test.go
tapeworm/botv2/search/: BUILD.bazel  search.go
tapeworm/botv2/skippedlinks/: BUILD.bazel  service.go  skipped_links.go  sqlite3.go
tapeworm/botv2/sonic/: run-sonic.sh
tapeworm/botv2/sql/: BUILD.bazel  links.go  skipped_links.go  updates.go
tapeworm/botv2/updates/: BUILD.bazel  service.go  sqlite3.go  updates.go
tapeworm/botv2/web/: BUILD.bazel  gzip_writer.go  server.go  utils.go
tapeworm/images/: BUILD.bazel
tapeworm/svelte-test/: BUILD.bazel  package.json  postcss.config.js  rollup.config.js  tailwind.config.js
tapeworm/svelte-test/src/: App.svelte  index.template.html
tapeworm/uiv2/: App.svelte  BUILD.bazel  Links.svelte  devserver.js  index.html  watch.sh
tapeworm/uiv2/nginx-static/: BUILD.bazel  BUILD.bazel.disabled  Dockerfile  README.md  run.sh
tapeworm/uiv3/: BUILD.bazel  next.config.js  package.json  tsconfig.json  watch.sh
tapeworm/uiv3/pages/: _app.tsx  index.tsx
tapeworm/uiv3/styles/: globals.css
tapeworm_bot/bot/: BUILD.bazel  bot.py  lib.py
tools/: BUILD  BUILD.bazel  test.sh  update-bot-ui.sh  update-bot.sh  update-deps.sh  update-gazelle.sh  workspace-status.sh
tools/bazel_tools/: buildifier.sh
tools/sys/: gc-cache.sh
(+64 files in other folders)
