load("@py_deps//:requirements.bzl", "requirement")


py_library(
    name = 'pytest',
    deps = [
        requirement('py'),
        requirement('packaging'),
        requirement('pluggy'),
        requirement('importlib-metadata'),
        requirement('zipp'),
        requirement('attrs'),
        requirement('more-itertools'),
        requirement('wcwidth'),
        requirement('pytest'),
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "venv/**",
        ]
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//experiments:all-srcs",
        "//python_test:all-srcs"
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)