load("@py_deps//:requirements.bzl", "requirement")


py_library(
    name = 'pytest',
    deps = [
        requirement('py'),
        requirement('packaging'),
        requirement('pluggy'),
        requirement('attrs'),
        requirement('importlib-metadata'),
        requirement('zipp'),
        requirement('more-itertools'),
        requirement('wcwidth'),
        requirement('pytest'),
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
        exclude = [
            "bazel-*/**",
            ".git/**",
            "venv/**",
        ]
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//examples:all-srcs",
        "//tapeworm_bot:all-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)