package(default_visibility = ["//visibility:public"])


filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
        "//examples/python:all-srcs",
    ],
    tags = ["automanaged"],
)