load("@py_deps//:requirements.bzl", "requirement")

package(default_visibility = ["//visibility:public"])

sh_test(
    name = "verify-black",
    srcs = ["verify-black.sh"],
    data = [
        ":black_bin",
        "//:all-srcs"
    ]
)

py_binary(
    name = 'black_bin',
    srcs = ['black_bin.py'],
    tags = ['lint'],
    deps = [
        requirement("black"),
        requirement("appdirs"),
        requirement("attrs"),
        requirement("Click"),
        requirement("pathspec"),
        requirement("regex"),
        requirement("toml"),
        requirement("typed-ast"),
    ]
)

filegroup(
    name = "package-srcs",
    srcs = glob(["**"]),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [":package-srcs"],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)