load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "logging_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaxsax/projects/logging",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_clickhouse_clickhouse_go//:go_default_library",
        "@com_github_mitchellh_mapstructure//:mapstructure",
        "@com_github_oklog_run//:go_default_library",
    ],
)

go_binary(
    name = "logging",
    embed = [":logging_lib"],
    visibility = ["//visibility:public"],
)
