py_library(
    name = 'lib',
    srcs = [
        'lib.py'
    ]
)

py_test(
    name = 'lib_test',
    srcs = [
        'lib.py',
        'lib_test.py',
    ],
    size = "small",
)

py_binary(
    name = 'main',
    srcs = [
        'main.py'
    ],
    deps = [
        ':lib'
    ]
)