package(default_visibility = ["//visibility:public"])

sh_binary(
    name = "test",
    srcs = ["test.sh"],
)

sh_binary(
    name = "update-bot",
    srcs = ["update-bot.sh"],
)

sh_binary(
    name = "update-bot-ui",
    srcs = ["update-bot-ui.sh"],
)

sh_binary(
    name = "update-deps",
    srcs = ["update-deps.sh"],
)
