load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "logtest_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaxsax/projects/experiments/logtest",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_btburke_cannon//:cannon",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "logtest",
    embed = [":logtest_lib"],
    visibility = ["//visibility:public"],
)
