load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@rules_pkg//:pkg.bzl", "pkg_tar", "pkg_deb")


rollup_bundle(
    name = "bundle",
    entry_point = "src/main.js",
    config_file = "rollup.config.js",
    output_dir = True,
    srcs = [
        "src/foo.js",
    ],
    deps = [
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-html",
    ]
)


pkg_tar(
    name = "bundle-bin",
    strip_prefix = "/experiments/rollup/bundle",
    package_dir = "/var/www/html",
    srcs = [":bundle"],
    mode = "0755",
    visibility = ["//visibility:public"]
)
