load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

rollup_bundle(
    name = "bundle",
    srcs = [
        "src/foo.js",
    ],
    config_file = "rollup.config.js",
    entry_point = "src/main.js",
    output_dir = True,
    deps = [
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-html",
        "@npm//@rollup/plugin-node-resolve",
    ],
)

pkg_tar(
    name = "bundle-bin",
    srcs = [":bundle"],
    mode = "0755",
    package_dir = "/var/www/html",
    strip_prefix = "/experiments/rollup/bundle",
    visibility = ["//visibility:public"],
)
