load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "bot.go",
        "config.go",
        "entities.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/bot_v2",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_davecgh_go_spew//spew:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_telegram_bot_api_telegram_bot_api//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
