load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bot.go",
        "db.go",
        "entities.go",
        "telegram.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/enhancers:go_default_library",
        "//tapeworm/botv2/internal:go_default_library",
        "//tapeworm/botv2/links:go_default_library",
        "//tapeworm/botv2/skippedlinks:go_default_library",
        "//tapeworm/botv2/updates:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_telegram_bot_api_telegram_bot_api//:go_default_library",
        "@com_github_jmoiron_sqlx//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["entities_test.go"],
    embed = [":go_default_library"],
    deps = ["@com_github_stretchr_testify//require:go_default_library"],
)
