load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "botv2",
    srcs = [
        "bot.go",
        "entities.go",
        "telegram.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/enhancers",
        "//tapeworm/botv2/internal",
        "//tapeworm/botv2/internal/utils",
        "//tapeworm/botv2/links",
        "//tapeworm/botv2/skippedlinks",
        "//tapeworm/botv2/updates",
        "@com_github_go_telegram_bot_api_telegram_bot_api//:telegram-bot-api",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "botv2_test",
    srcs = ["entities_test.go"],
    deps = ["@com_github_stretchr_testify//require"],
)
