load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")

filegroup(
    name = "public",
    srcs = glob(
        [
            "public/*",
        ],
        exclude_directories = 0,
    ),
    visibility = ["//visibility:public"],
)

rollup_bundle(
    name = "bundle",
    entry_point = "src/main.js",
    config_file = "rollup.config.js",
    output_dir = True,
    sourcemap = "true",
    format = "esm",
    srcs = [
        "src/App.svelte",
        "src/Tailwindcss.svelte",
    ],
    deps = [
        "@npm//@rollup/plugin-node-resolve",
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-html",
        "@npm//rollup-plugin-svelte",
        "@npm//rollup-plugin-livereload",
        "@npm//rollup-plugin-terser",
        "@npm//svelte",
        "@npm//svelte-preprocess",
        "@npm//tailwindcss",
        "@npm//postcss",
        "@npm//postcss-load-config",
        "@npm//rxjs",
        "@npm//moment",
        "@npm//fuzzysort",
    ],
)

pkg_web(
    name = "statics",
    srcs = glob([
        "static/*",
    ]),
)

pkg_tar(
    name = "static-bin",
    strip_prefix = "/tapeworm/svelte-test/statics",
    package_dir = "/var/www/html",
    srcs = [":statics"],
    mode = "0755",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bundle-bin",
    strip_prefix = "/tapeworm/svelte-test/bundle",
    package_dir = "/var/www/html",
    srcs = [":bundle"],
    mode = "0755",
    visibility = ["//visibility:public"],
)
