load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@build_bazel_rules_nodejs//:index.bzl", "pkg_web")

filegroup(
    name = "public",
    srcs = glob(
        [
            "public/*",
        ],
        exclude_directories = 0,
    ),
    visibility = ["//visibility:public"],
)

rollup_bundle(
    name = "bundle",
    srcs = [
        "src/App.svelte",
        "src/Tailwindcss.svelte",
    ],
    config_file = "rollup.config.js",
    entry_point = "src/main.js",
    format = "esm",
    output_dir = True,
    sourcemap = "true",
    deps = [
        "@npm//@rollup/plugin-commonjs",
        "@npm//@rollup/plugin-html",
        "@npm//@rollup/plugin-node-resolve",
        "@npm//fuzzysort",
        "@npm//moment",
        "@npm//postcss",
        "@npm//postcss-load-config",
        "@npm//rollup-plugin-livereload",
        "@npm//rollup-plugin-svelte",
        "@npm//rollup-plugin-terser",
        "@npm//rxjs",
        "@npm//svelte",
        "@npm//svelte-preprocess",
        "@npm//tailwindcss",
    ],
)

pkg_web(
    name = "statics",
    srcs = glob([
        "static/*",
    ]),
)

pkg_tar(
    name = "static-bin",
    srcs = [":statics"],
    mode = "0755",
    package_dir = "/var/www/html",
    strip_prefix = "/tapeworm/svelte-test/statics",
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "bundle-bin",
    srcs = [":bundle"],
    mode = "0755",
    package_dir = "/var/www/html",
    strip_prefix = "/tapeworm/svelte-test/bundle",
    visibility = ["//visibility:public"],
)
