load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "svelte", "bundle_dev", "bundle_prod")

svelte(
    name = "App",
    entry_point = "App.svelte",
    srcs = ["main.js"],
    deps = [
        ":Links",
    ]
)

svelte(
    name = "Links",
    entry_point = "Links.svelte",
)

bundle_dev(
    name = "bundle_dev",
    entry_point = "main.js",
    deps = [
        ":App",
        "@npm//lodash",
        "@npm//moment",
    ],
    visibility = ["//visibility:public"],
)

bundle_prod(
  name = "bundle_prod",
  entry_point = "main.js",
  deps = [
     ":App",
    "@npm//lodash",
    "@npm//moment",
  ],
  visibility = ["//visibility:public"],
)

filegroup(
    name = "statics",
    srcs = [
        "semantic.css",
        "semantic.js",
        "jquery-3.1.1.min.js",
        "index.html",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "devserver",
    entry_point = "devserver.js",
    tags = ["ibazel_notify_changes"],
    data = [
        "index.html",
        ":bundle_dev",
        ":statics",
        "@npm//browser-sync",
    ],
)
