load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@build_bazel_rules_svelte//:defs.bzl", "bundle_dev", "bundle_prod", "svelte")

svelte(
    name = "App",
    srcs = ["main.js"],
    entry_point = "App.svelte",
    deps = [
        ":Links",
    ],
)

svelte(
    name = "Links",
    entry_point = "Links.svelte",
)

bundle_dev(
    name = "bundle_dev",
    entry_point = "main.js",
    visibility = ["//visibility:public"],
    deps = [
        ":App",
        "@npm//lodash",
        "@npm//moment",
    ],
)

bundle_prod(
    name = "bundle_prod",
    entry_point = "main.js",
    visibility = ["//visibility:public"],
    deps = [
        ":App",
        "@npm//lodash",
        "@npm//moment",
    ],
)

filegroup(
    name = "statics",
    srcs = [
        "index.html",
        "jquery-3.1.1.min.js",
        "semantic.css",
        "semantic.js",
    ],
    visibility = ["//visibility:public"],
)

nodejs_binary(
    name = "devserver",
    data = [
        "index.html",
        ":bundle_dev",
        ":statics",
        "@npm//browser-sync",
    ],
    entry_point = "devserver.js",
    tags = ["ibazel_notify_changes"],
)
