load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

filegroup(
    name = "config",
    srcs = [
        "package.json",
        "tsconfig.json",
        "next.config.js",
    ],
)

filegroup(
    name = "sources",
    srcs = [
        "pages/index.tsx",
    ]
)

filegroup(
    name = "webapp-uiv3",
    srcs = [
        ":config",
        ":sources"
    ]
)

nodejs_binary(
    name = "next",
    data = [
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/next/dist/bin/next",
)

genrule(
    name = "build",
    srcs = [
        ":webapp-uiv3",
        "@npm//:node_modules",
    ],
    outs = ["next.tar.gz"],
    cmd = """
        $(location next) build ./tapeworm/uiv3
        tar -czvf next.tar.gz tapeworm/uiv3/.next
        mv next.tar.gz $(@D)
    """,
    tools = [":next"],
)

nodejs_binary(
    name = "start",
    args = ["./tapeworm/uiv3"],
    data = [
        ":build",
        ":webapp-uiv3",
        "@npm//:node_modules",
    ],
    entry_point = "@npm//:node_modules/next/dist/bin/next",
)

genrule(
    name = "export",
    srcs = [
        ":build",
        "@npm//:node_modules",
    ],
    outs = ["next.export.tar.gz"],
    cmd = """
        tar xvf $(location //tapeworm/uiv3:build)
        $(location next) export tapeworm/uiv3
        tar czvf next.export.tar.gz tapeworm/uiv3/out
        mv next.export.tar.gz $(@D)
    """,
    tools = [":next"]
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "webapp",
    deps = [
        ":export"
    ],
    strip_prefix = ".",
)
