load("@py_deps//:requirements.bzl", "requirement")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")


py_binary(
    name = 'bot',
    srcs = [
        'bot.py'
    ],
    deps = [
        ':lib'
    ]
)

py3_image(
    name = 'image',
    srcs = [
        'bot.py'
    ],
    deps = [
        ':lib'
    ],
    main = 'bot.py'
)

py_library(
    name = 'lib',
    srcs = [
        'lib.py'
    ],
    deps = [
        requirement('Werkzeug'),
        requirement('Jinja2'),
        requirement('itsdangerous'),
        requirement('Click'),
        requirement('Flask'),
    ],
)

filegroup(
    name = "package-srcs",
    srcs = glob(
        ["**"],
    ),
    tags = ["automanaged"],
    visibility = ["//visibility:private"],
)

filegroup(
    name = "all-srcs",
    srcs = [
        ":package-srcs",
    ],
    tags = ["automanaged"],
    visibility = ["//visibility:public"],
)