package(default_visibility = ["//visibility:public"])

py_library(
    name = "lib",
    srcs = [
        "lib.py",
    ],
)

py_test(
    name = "lib_pytest",
    size = "small",
    srcs = [
        "lib.py",
        "lib_pytest.py",
    ],
    deps = [
        "//:pytest",
    ],
)

py_test(
    name = "lib_test",
    size = "small",
    srcs = [
        "lib.py",
        "lib_test.py",
    ],
)

py_binary(
    name = "main",
    srcs = [
        "main.py",
    ],
    deps = [
        ":lib",
    ],
)
