load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "query_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaxsax/projects/logging/cmd/query",
    visibility = ["//visibility:private"],
    deps = ["//logging/internal/queryrunner"],
)

go_binary(
    name = "query",
    embed = [":query_lib"],
    visibility = ["//visibility:public"],
)
