load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/jaxsax/projects/rpc/twirp/client",
    visibility = ["//visibility:private"],
    deps = ["//rpc/twirp/helloworld:go_default_library"],
)

go_binary(
    name = "client",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
