load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaxsax/projects/rpc/twirp/client",
    visibility = ["//visibility:private"],
    deps = ["//rpc/twirp/helloworld"],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
