load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "helloworld.pb.go",
        "helloworld.twirp.go",
    ],
    importpath = "github.com/jaxsax/projects/rpc/twirp/helloworld",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_twitchtv_twirp//:go_default_library",
        "@com_github_twitchtv_twirp//ctxsetters:go_default_library",
        "@org_golang_google_protobuf//reflect/protoreflect:go_default_library",
        "@org_golang_google_protobuf//runtime/protoimpl:go_default_library",
    ],
)
