load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "helloworld",
    srcs = [
        "helloworld.pb.go",
        "helloworld.twirp.go",
    ],
    importpath = "github.com/jaxsax/projects/rpc/twirp/helloworld",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_twitchtv_twirp//:twirp",
        "@com_github_twitchtv_twirp//ctxsetters",
        "@org_golang_google_protobuf//reflect/protoreflect",
        "@org_golang_google_protobuf//runtime/protoimpl",
    ],
)
