load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/jaxsax/projects/rpc/twirp/server",
    visibility = ["//visibility:private"],
    deps = ["//rpc/twirp/helloworld"],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
