load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "enhancers",
    srcs = [
        "links.go",
        "title_reader.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/enhancers",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_net//html"],
)

go_test(
    name = "enhancers_test",
    srcs = [
        "links_test.go",
        "title_reader_test.go",
    ],
    embed = [":enhancers"],
    deps = ["@com_github_stretchr_testify//require"],
)
