load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "internal",
    srcs = ["config.go"],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/internal",
    visibility = ["//tapeworm/botv2:__subpackages__"],
    deps = ["@in_gopkg_yaml_v2//:yaml_v2"],
)

go_test(
    name = "internal_test",
    srcs = ["config_test.go"],
    deps = [
        ":internal",
        "@com_github_stretchr_testify//require",
    ],
)
