load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "links",
    srcs = [
        "links.go",
        "sqlite3.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/links",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/models",
        "@com_github_volatiletech_sqlboiler_v4//boil",
    ],
)
