load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "models",
    srcs = [
        "boil_queries.go",
        "boil_table_names.go",
        "boil_types.go",
        "links.go",
        "skipped_links.go",
        "sqlite_upsert.go",
        "updates.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/models",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_friendsofgo_errors//:errors",
        "@com_github_volatiletech_sqlboiler_v4//boil",
        "@com_github_volatiletech_sqlboiler_v4//drivers",
        "@com_github_volatiletech_sqlboiler_v4//queries",
        "@com_github_volatiletech_sqlboiler_v4//queries/qm",
        "@com_github_volatiletech_sqlboiler_v4//queries/qmhelper",
        "@com_github_volatiletech_strmangle//:strmangle",
    ],
)

go_test(
    name = "models_test",
    srcs = [
        "boil_main_test.go",
        "boil_queries_test.go",
        "boil_suites_test.go",
        "links_test.go",
        "skipped_links_test.go",
        "sqlite3_main_test.go",
        "sqlite3_suites_test.go",
        "updates_test.go",
    ],
    embed = [":models"],
    deps = [
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_pkg_errors//:errors",
        "@com_github_spf13_viper//:viper",
        "@com_github_volatiletech_randomize//:randomize",
        "@com_github_volatiletech_sqlboiler_v4//boil",
        "@com_github_volatiletech_sqlboiler_v4//queries",
        "@com_github_volatiletech_strmangle//:strmangle",
    ],
)
