load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "skippedlinks",
    srcs = [
        "service.go",
        "skipped_links.go",
        "sqlite3.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/skippedlinks",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/internal/utils",
        "//tapeworm/botv2/models",
        "@com_github_volatiletech_sqlboiler_v4//boil",
    ],
)
