load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sql",
    srcs = [
        "links.go",
        "skipped_links.go",
        "updates.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/sql",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/links",
        "//tapeworm/botv2/skippedlinks",
        "//tapeworm/botv2/updates",
        "@com_github_jmoiron_sqlx//:sqlx",
    ],
)
