load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "updates",
    srcs = [
        "service.go",
        "updates.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/updates",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/internal/utils",
        "//tapeworm/botv2/models",
        "@com_github_go_telegram_bot_api_telegram_bot_api//:telegram-bot-api",
        "@com_github_volatiletech_sqlboiler_v4//boil",
    ],
)
