load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "gzip_writer.go",
        "server.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/web",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/internal:go_default_library",
        "//tapeworm/botv2/links:go_default_library",
        "@com_github_btburke_cannon//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
