load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = [
        "gzip_writer.go",
        "server.go",
    ],
    importpath = "github.com/jaxsax/projects/tapeworm/botv2/web",
    visibility = ["//visibility:public"],
    deps = [
        "//tapeworm/botv2/internal",
        "//tapeworm/botv2/links",
        "//tapeworm/botv2/search",
        "@com_github_felixge_httpsnoop//:httpsnoop",
        "@org_uber_go_zap//:zap",
    ],
)
